# LightRAG

./: README.md  main.py  pyproject.toml
working_dir/: graph_chunk_entity_relation.graphml  kv_store_llm_response_cache.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
