[tool.poetry]
name = "lightrag"
version = "0.1.0"
description = ""
authors = ["pararthdave <pararthdave@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llvmlite = "^0.43.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
